--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -24,7 +24,7 @@
           </div>
   
           <div class="d-grid gap-2 mb-3 fila">
-            <button [disabled]="!formUsuarios.valid" type="submit" class="iniciarBoton">Registrar</button>
+            <button [disabled]="!formUsuarios.valid" type="submit" class="iniciarBoton">Editar</button>
           </div>
   
           <div class="d-grid gap-2 mb-3 botonVolver">
